--- a/examples/astropy.ipynb
+++ b/examples/astropy.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -59,9 +59,7 @@
     "plt.ylabel(\"Flux (e-/s)\")\n",
     "plt.title(\"Kepler Lightcurve\")\n",
     "plt.grid(alpha=0.3)\n",
-    "plt.tight_layout()\n",
-    "plt.savefig(\"kplr\")\n",
-    "\n"
+    "plt.tight_layout()\n"
    ]
   },
   {
